--- a/index.html
+++ b/index.html
@@ -6,19 +6,11 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-	<div class="container">
-		<div class="div1">div1</div>
-		<div>div2</div>
-		<div>div3</div>
-		<div>div4</div>
-		<div class="div5">div5</div>
-		<div>div6</div>
-		<div>div7</div>
-		<div>div8</div>
-		<div>div9</div>
-		<div>div10</div>
-		<div>div11</div>
-		<div>div12</div>
-	</div>
+	<section class="container">
+		<header class="header">header</header>
+		<aside class="aside">banner</aside>
+		<main class="main">main</main>
+		<footer class="footer">footer</footer>
+	</section>
   </body>
 </html>
